Upgraded Robolectric, Roboguice and support libraries; Raised target sdk to 21;